--- a/InteractivePatchComparisonWidget.ui
+++ b/InteractivePatchComparisonWidget.ui
@@ -27,7 +27,7 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,6,1,6,1,1">
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,5,1,5,1,1">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
@@ -145,7 +145,10 @@
          </widget>
         </item>
         <item>
-         <widget class="PatchInfoWidgetParent" name="SourcePatchInfoWidget" native="true"/>
+         <widget class="QStackedWidget" name="SourcePatchInfoWidgetPlaceholder">
+          <widget class="QWidget" name="page"/>
+          <widget class="QWidget" name="page_2"/>
+         </widget>
         </item>
         <item>
          <widget class="QLabel" name="lblTargetPatch">
@@ -198,7 +201,10 @@
          </widget>
         </item>
         <item>
-         <widget class="PatchInfoWidgetParent" name="TargetPatchInfoWidget" native="true"/>
+         <widget class="QStackedWidget" name="TargetPatchInfoWidgetPlaceholder">
+          <widget class="QWidget" name="page_3"/>
+          <widget class="QWidget" name="page_4"/>
+         </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -408,12 +414,6 @@
    <class>QVTKWidget</class>
    <extends>QWidget</extends>
    <header>QVTKWidget.h</header>
-  </customwidget>
-  <customwidget>
-   <class>PatchInfoWidgetParent</class>
-   <extends>QWidget</extends>
-   <header>PatchInfoWidget.h</header>
-   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
