--- a/PatchInfoWidget.ui
+++ b/PatchInfoWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>199</width>
+    <width>201</width>
     <height>381</height>
    </rect>
   </property>
@@ -66,6 +66,13 @@
       </layout>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="chkFlip">
+     <property name="text">
+      <string>Flip</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QLabel" name="label">
