--- a/TopPatchesWidget.ui
+++ b/TopPatchesWidget.ui
@@ -17,7 +17,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="2">
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1,0,0,0">
+      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1,0,0,0,0">
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
@@ -69,9 +69,16 @@
         </layout>
        </item>
        <item>
-        <widget class="QPushButton" name="btnCompute">
+        <widget class="QPushButton" name="btnFindTopPatches">
          <property name="text">
-          <string>Compute</string>
+          <string>Find Top Matches</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnComputeSecondary">
+         <property name="text">
+          <string>Compute Secondary</string>
          </property>
         </widget>
        </item>
