--- a/InteractivePatchComparisonWidget.ui
+++ b/InteractivePatchComparisonWidget.ui
@@ -209,7 +209,7 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
-           <widget class="QLabel" name="label_4">
+           <widget class="QLabel" name="lblScoreName">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
               <horstretch>0</horstretch>
@@ -269,7 +269,7 @@
      <x>0</x>
      <y>0</y>
      <width>763</width>
-     <height>29</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuLeft_Pane">
